# alicedb

./: .gitignore  Cargo.toml  LICENSE  README.md  database_name.cm.adb  log.txt
src/: config.example.json  database_name.cm.adb  main.rs
src/alice_fs/: mod.rs
src/backer/: mod.rs
src/cache/: mod.rs
src/cacher/: mod.rs
src/commit_manager/: mod.rs
src/compression/: mod.rs
src/conductor/: mod.rs  transaction.rs
src/configurator/: mod.rs
src/engines/: csv.rs
src/executor/: mod.rs
src/journalist/: Cargo.toml
src/logger_macro/: Cargo.toml
src/logger_macro/src/: lib.rs
src/misc/: mod.rs
