workspace = { members = ["src/journalist"] }
[package]
name = "alicedb"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Database for big data."
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
cacher = { git = "https://github.com/Alice-Group/cacher.git", branch = "main" }
journalist = { git = "https://github.com/Alice-Group/journalist.git", branch = "main" }
log = "0.4.20"
env_logger = "0.10.1"
